envoy/envoy-deployment.yaml
####################################################
# App Deployment with OPA-Envoy and Envoy sidecars.
####################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  labels:
    app: example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      initContainers:
        - name: proxy-init
          image: openpolicyagent/proxy_init:v5
          # Configure the iptables bootstrap script to redirect traffic to the
          # Envoy proxy on port 8000, specify that Envoy will be running as user
          # 1111, and that we want to exclude port 8282 from the proxy for the
          # OPA health checks. These values must match up with the configuration
          # defined below for the "envoy" and "opa" containers.
          args: ["-p", "8000", "-u", "1111", "-w", "8282"]
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            runAsNonRoot: false
            runAsUser: 0
      containers:
        - name: app
          image: openpolicyagent/demo-test-server:v1
          ports:
            - containerPort: 8080
        - name: envoy
          image: envoyproxy/envoy:v1.10.0
          securityContext:
            runAsUser: 1111
          volumeMounts:
            - readOnly: true
              mountPath: /config
              name: proxy-config
          args:
            - "envoy"
            - "--config-path"
            - "/config/envoy.yaml"
        - name: opa-envoy
          image: avarghese23/opa:v0.26.0-envoy-1
          securityContext:
            runAsUser: 1111
          volumeMounts:
            - readOnly: true
              mountPath: /policy
              name: opa-policy
            - readOnly: true
              mountPath: /schema
              name: opa-schema
            - readOnly: true
              mountPath: /config
              name: opa-envoy-config
          args:
            - "run"
            - "--server"
            - "--config-file=/config/config.yaml"
            - "--addr=localhost:8181"
            - "--diagnostic-addr=0.0.0.0:8282"
            - "--ignore=.*"
            - "--schema=/schema/input-schema.json"
            - "/policy/policy.rego"
          livenessProbe:
            httpGet:
              path: /health?plugins
              scheme: HTTP
              port: 8282
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health?plugins
              scheme: HTTP
              port: 8282
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: proxy-config
          configMap:
            name: proxy-config
        - name: opa-policy
          configMap:
            name: opa-policy
        - name: opa-schema
          configMap:
            name: opa-schema
        - name: opa-envoy-config
          configMap:
            name: opa-envoy-config
---
############################################################
# Example configuration to bootstrap OPA-Envoy sidecars.
############################################################
apiVersion: v1
kind: ConfigMap
metadata:
  name: opa-envoy-config
data:
  config.yaml: |
    plugins:
      envoy_ext_authz_grpc:
        addr: :9191
        path: envoy/authz/allow
    decision_logs:
      console: true
---
######################################################################
# Envoy Config with External Authorization filter that will query OPA.
######################################################################
apiVersion: v1
kind: ConfigMap
metadata:
  name: proxy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8000
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: service
              http_filters:
              - name: envoy.ext_authz
                typed_config:
                  "@type": type.googleapis.com/envoy.config.filter.http.ext_authz.v2.ExtAuthz
                  with_request_body:
                    max_request_bytes: 8192
                    allow_partial_message: true
                  failure_mode_allow: false
                  grpc_service:
                    google_grpc:
                      target_uri: 127.0.0.1:9191
                      stat_prefix: ext_authz
                    timeout: 0.5s
              - name: envoy.router
                typed_config: {}
      clusters:
      - name: service
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 8080
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
---
############################################################
# Example policy to enforce into OPA-Envoy sidecars.
############################################################
apiVersion: v1
kind: ConfigMap
metadata:
  name: opa-policy
data:
  policy.rego: |
    package envoy.authz

    import input.attributes.request.http as http_request

    default allow = false

    token = {"valid": valid, "payload": payload} {
        [_, encoded] := split(http_request.headers.authorization, " ")
        [valid, _, payload] := io.jwt.decode_verify(encoded, {"secret": "secret"})
    }

    allow {
        is_token_valid
        action_allowed
    }

    is_token_valid {
      token.valid
      now := time.now_ns() / 1000000000
      token.payload.nbf <= now
      now < token.payload.exp
    }

    action_allowed {
      http_request.method == "GET"
      token.payload.role == "guest"
      glob.match("/people*", [], http_request.path)
    }

    action_allowed {
      http_request.method == "GET"
      token.payload.role == "admin"
      glob.match("/people*", [], http_request.path)
    }

    action_allowed {
      http_request.method == "POST"
      token.payload.role == "admin"
      glob.match("/people", [], http_request.path)
      lower(input.parsed_body.firstname) != base64url.decode(token.payload.sub)
    }
---
############################################################
# Example schema to type check the above policy
############################################################
apiVersion: v1
kind: ConfigMap
metadata:
  name: opa-schema
data:
  input-schema.json: |
    {
    "$schema": "http://json-schema.org/draft-07/schema",
    "$id": "http://example.com/example.json",
    "type": "object",
    "title": "The root schema",
    "description": "The root schema comprises the entire JSON document.",
    "required": [
        "attributes",
        "parsed_body",
        "parsed_path",
        "parsed_query",
        "truncated_body"
    ],
    "properties": {
        "attributes": {
            "$id": "#/properties/attributes",
            "type": "object",
            "title": "The attributes schema",
            "description": "An explanation about the purpose of this instance.",
            "required": [
                "source",
                "destination",
                "request"
            ],
            "properties": {
                "source": {
                    "$id": "#/properties/attributes/properties/source",
                    "type": "object",
                    "title": "The source schema",
                    "description": "An explanation about the purpose of this instance.",
                    "required": [
                        "address"
                    ],
                    "properties": {
                        "address": {
                            "$id": "#/properties/attributes/properties/source/properties/address",
                            "type": "object",
                            "title": "The address schema",
                            "description": "An explanation about the purpose of this instance.",
                            "required": [
                                "Address"
                            ],
                            "properties": {
                                "Address": {
                                    "$id": "#/properties/attributes/properties/source/properties/address/properties/Address",
                                    "type": "object",
                                    "title": "The Address schema",
                                    "description": "An explanation about the purpose of this instance.",
                                    "required": [
                                        "SocketAddress"
                                    ],
                                    "properties": {
                                        "SocketAddress": {
                                            "$id": "#/properties/attributes/properties/source/properties/address/properties/Address/properties/SocketAddress",
                                            "type": "object",
                                            "title": "The SocketAddress schema",
                                            "description": "An explanation about the purpose of this instance.",
                                            "required": [
                                                "PortSpecifier",
                                                "address"
                                            ],
                                            "properties": {
                                                "PortSpecifier": {
                                                    "$id": "#/properties/attributes/properties/source/properties/address/properties/Address/properties/SocketAddress/properties/PortSpecifier",
                                                    "type": "object",
                                                    "title": "The PortSpecifier schema",
                                                    "description": "An explanation about the purpose of this instance.",
                                                    "required": [
                                                        "PortValue"
                                                    ],
                                                    "properties": {
                                                        "PortValue": {
                                                            "$id": "#/properties/attributes/properties/source/properties/address/properties/Address/properties/SocketAddress/properties/PortSpecifier/properties/PortValue",
                                                            "type": "integer",
                                                            "title": "The PortValue schema",
                                                            "description": "An explanation about the purpose of this instance."
                                                        }
                                                    },
                                                    "additionalProperties": false
                                                },
                                                "address": {
                                                    "$id": "#/properties/attributes/properties/source/properties/address/properties/Address/properties/SocketAddress/properties/address",
                                                    "type": "string",
                                                    "title": "The address schema",
                                                    "description": "An explanation about the purpose of this instance."
                                                }
                                            },
                                            "additionalProperties": false
                                        }
                                    },
                                    "additionalProperties": false
                                }
                            },
                            "additionalProperties": false
                        }
                    },
                    "additionalProperties": false
                },
                "destination": {
                    "$id": "#/properties/attributes/properties/destination",
                    "type": "object",
                    "title": "The destination schema",
                    "description": "An explanation about the purpose of this instance.",
                    "required": [
                        "address"
                    ],
                    "properties": {
                        "address": {
                            "$id": "#/properties/attributes/properties/destination/properties/address",
                            "type": "object",
                            "title": "The address schema",
                            "description": "An explanation about the purpose of this instance.",
                            "required": [
                                "Address"
                            ],
                            "properties": {
                                "Address": {
                                    "$id": "#/properties/attributes/properties/destination/properties/address/properties/Address",
                                    "type": "object",
                                    "title": "The Address schema",
                                    "description": "An explanation about the purpose of this instance.",
                                    "required": [
                                        "SocketAddress"
                                    ],
                                    "properties": {
                                        "SocketAddress": {
                                            "$id": "#/properties/attributes/properties/destination/properties/address/properties/Address/properties/SocketAddress",
                                            "type": "object",
                                            "title": "The SocketAddress schema",
                                            "description": "An explanation about the purpose of this instance.",
                                            "required": [
                                                "PortSpecifier",
                                                "address"
                                            ],
                                            "properties": {
                                                "PortSpecifier": {
                                                    "$id": "#/properties/attributes/properties/destination/properties/address/properties/Address/properties/SocketAddress/properties/PortSpecifier",
                                                    "type": "object",
                                                    "title": "The PortSpecifier schema",
                                                    "description": "An explanation about the purpose of this instance.",
                                                    "required": [
                                                        "PortValue"
                                                    ],
                                                    "properties": {
                                                        "PortValue": {
                                                            "$id": "#/properties/attributes/properties/destination/properties/address/properties/Address/properties/SocketAddress/properties/PortSpecifier/properties/PortValue",
                                                            "type": "integer",
                                                            "title": "The PortValue schema",
                                                            "description": "An explanation about the purpose of this instance."
                                                        }
                                                    },
                                                    "additionalProperties": false
                                                },
                                                "address": {
                                                    "$id": "#/properties/attributes/properties/destination/properties/address/properties/Address/properties/SocketAddress/properties/address",
                                                    "type": "string",
                                                    "title": "The address schema",
                                                    "description": "An explanation about the purpose of this instance."
                                                }
                                            },
                                            "additionalProperties": false
                                        }
                                    },
                                    "additionalProperties": false
                                }
                            },
                            "additionalProperties": false
                        }
                    },
                    "additionalProperties": false
                },
                "request": {
                    "$id": "#/properties/attributes/properties/request",
                    "type": "object",
                    "title": "The request schema",
                    "description": "An explanation about the purpose of this instance.",
                    "required": [
                        "http"
                    ],
                    "properties": {
                        "http": {
                            "$id": "#/properties/attributes/properties/request/properties/http",
                            "type": "object",
                            "title": "The http schema",
                            "description": "An explanation about the purpose of this instance.",
                            "required": [
                                "id",
                                "method",
                                "headers",
                                "host",
                                "path",
                                "protocol",
                                "body",
                                "size"
                            ],
                            "properties": {
                                "id": {
                                    "$id": "#/properties/attributes/properties/request/properties/http/properties/id",
                                    "type": "string",
                                    "title": "The id schema",
                                    "description": "An explanation about the purpose of this instance."
                                },
                                "method": {
                                    "$id": "#/properties/attributes/properties/request/properties/http/properties/method",
                                    "type": "string",
                                    "title": "The method schema",
                                    "description": "An explanation about the purpose of this instance."
                                },
                                "headers": {
                                    "$id": "#/properties/attributes/properties/request/properties/http/properties/headers",
                                    "type": "object",
                                    "title": "The headers schema",
                                    "description": "An explanation about the purpose of this instance.",
                                    "required": [
                                        ":authority",
                                        ":method",
                                        ":path",
                                        "accept",
                                        "authorization",
                                        "content-length",
                                        "content-type",
                                        "user-agent",
                                        "x-forwarded-proto",
                                        "x-request-id"
                                    ],
                                    "properties": {
                                        ":authority": {
                                            "$id": "#/properties/attributes/properties/request/properties/http/properties/headers/properties/%3Aauthority",
                                            "type": "string",
                                            "title": "The :authority schema",
                                            "description": "An explanation about the purpose of this instance."
                                        },
                                        ":method": {
                                            "$id": "#/properties/attributes/properties/request/properties/http/properties/headers/properties/%3Amethod",
                                            "type": "string",
                                            "title": "The :method schema",
                                            "description": "An explanation about the purpose of this instance."
                                        },
                                        ":path": {
                                            "$id": "#/properties/attributes/properties/request/properties/http/properties/headers/properties/%3Apath",
                                            "type": "string",
                                            "title": "The :path schema",
                                            "description": "An explanation about the purpose of this instance."
                                        },
                                        "accept": {
                                            "$id": "#/properties/attributes/properties/request/properties/http/properties/headers/properties/accept",
                                            "type": "string",
                                            "title": "The accept schema",
                                            "description": "An explanation about the purpose of this instance."
                                        },
                                        "authorization": {
                                            "$id": "#/properties/attributes/properties/request/properties/http/properties/headers/properties/authorization",
                                            "type": "string",
                                            "title": "The authorization schema",
                                            "description": "An explanation about the purpose of this instance."
                                        },
                                        "content-length": {
                                            "$id": "#/properties/attributes/properties/request/properties/http/properties/headers/properties/content-length",
                                            "type": "string",
                                            "title": "The content-length schema",
                                            "description": "An explanation about the purpose of this instance."
                                        },
                                        "content-type": {
                                            "$id": "#/properties/attributes/properties/request/properties/http/properties/headers/properties/content-type",
                                            "type": "string",
                                            "title": "The content-type schema",
                                            "description": "An explanation about the purpose of this instance."
                                        },
                                        "user-agent": {
                                            "$id": "#/properties/attributes/properties/request/properties/http/properties/headers/properties/user-agent",
                                            "type": "string",
                                            "title": "The user-agent schema",
                                            "description": "An explanation about the purpose of this instance."
                                        },
                                        "x-forwarded-proto": {
                                            "$id": "#/properties/attributes/properties/request/properties/http/properties/headers/properties/x-forwarded-proto",
                                            "type": "string",
                                            "title": "The x-forwarded-proto schema",
                                            "description": "An explanation about the purpose of this instance."
                                        },
                                        "x-request-id": {
                                            "$id": "#/properties/attributes/properties/request/properties/http/properties/headers/properties/x-request-id",
                                            "type": "string",
                                            "title": "The x-request-id schema",
                                            "description": "An explanation about the purpose of this instance."
                                        }
                                    },
                                    "additionalProperties": false
                                },
                                "host": {
                                    "$id": "#/properties/attributes/properties/request/properties/http/properties/host",
                                    "type": "string",
                                    "title": "The host schema",
                                    "description": "An explanation about the purpose of this instance."
                                },
                                "path": {
                                    "$id": "#/properties/attributes/properties/request/properties/http/properties/path",
                                    "type": "string",
                                    "title": "The path schema",
                                    "description": "An explanation about the purpose of this instance."
                                },
                                "protocol": {
                                    "$id": "#/properties/attributes/properties/request/properties/http/properties/protocol",
                                    "type": "string",
                                    "title": "The protocol schema",
                                    "description": "An explanation about the purpose of this instance."
                                },
                                "body": {
                                    "$id": "#/properties/attributes/properties/request/properties/http/properties/body",
                                    "type": "string",
                                    "title": "The body schema",
                                    "description": "An explanation about the purpose of this instance."
                                },
                                "size": {
                                    "$id": "#/properties/attributes/properties/request/properties/http/properties/size",
                                    "type": "integer",
                                    "title": "The size schema",
                                    "description": "An explanation about the purpose of this instance."
                                }
                            },
                            "additionalProperties": false
                        }
                    },
                    "additionalProperties": false
                }
            },
            "additionalProperties": false
        },
        "parsed_body": {
            "$id": "#/properties/parsed_body",
            "type": "object",
            "title": "The parsed_body schema",
            "description": "An explanation about the purpose of this instance.",
            "required": [
                "firstname",
                "lastname"
            ],
            "properties": {
                "firstname": {
                    "$id": "#/properties/parsed_body/properties/firstname",
                    "type": "string",
                    "title": "The firstname schema",
                    "description": "An explanation about the purpose of this instance."
                },
                "lastname": {
                    "$id": "#/properties/parsed_body/properties/lastname",
                    "type": "string",
                    "title": "The lastname schema",
                    "description": "An explanation about the purpose of this instance."
                }
            },
            "additionalProperties": false
        },
        "parsed_path": {
            "$id": "#/properties/parsed_path",
            "type": "array",
            "title": "The parsed_path schema",
            "description": "An explanation about the purpose of this instance.",
            "additionalItems": false,
            "items": {
                "$id": "#/properties/parsed_path/items",
                "type": "string",
                "title": "The items schema",
                "description": "An explanation about the purpose of this instance."
            }
        },
        "parsed_query": {
            "$id": "#/properties/parsed_query",
            "type": "object",
            "title": "The parsed_query schema",
            "description": "An explanation about the purpose of this instance.",
            "required": [
                "lang"
            ],
            "properties": {
                "lang": {
                    "$id": "#/properties/parsed_query/properties/lang",
                    "type": "array",
                    "title": "The lang schema",
                    "description": "An explanation about the purpose of this instance.",
                    "additionalItems": false,
                    "items": {
                        "$id": "#/properties/parsed_query/properties/lang/items",
                        "type": "string",
                        "title": "The items schema",
                        "description": "An explanation about the purpose of this instance."
                    }
                }
            },
            "additionalProperties": false
        },
        "truncated_body": {
            "$id": "#/properties/truncated_body",
            "type": "boolean",
            "title": "The truncated_body schema",
            "description": "An explanation about the purpose of this instance."
        }
    },
    "additionalProperties": false
    }
